# rust-react-football-results

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
client/: Dockerfile  README.md  deploy.sh  fly.toml  package.json  vite.config.ts
client/src/: App.tsx  main.tsx  store.ts
client/src/features/football/: FootballResults.tsx  LastUpdated.tsx  Standings.tsx  footballSlice.ts  standingsFilterSlice.ts
client/src/features/football/FootballResults/: FootballResults.tsx
client/src/features/football/FootballResults/FootballResultsHeader/: FootballResultsHeader.tsx  LeagueInfo.tsx  Season.tsx
client/src/features/football/Standings/: Standings.css  Standings.tsx  StandingsHeader.tsx
client/src/features/football/Standings/Form/: Form.tsx
client/src/features/football/Standings/RecentForm/: FormIndicator.tsx  RecentForm.tsx
client/src/features/football/Standings/StandingsHeader/: MatchFilterTab.tsx  StandingsHeader.tsx
client/src/features/football/Standings/StandingsTable/: Standing.tsx  StandingsTable.tsx  StandingsTableBody.tsx  StandingsTableHeader.tsx
client/src/services/: football.ts
client/src/services/football/: index.ts
client/src/services/football/types/: index.ts  raw.ts
mock_football_api/: Cargo.toml  README.md
mock_football_api/src/: main.rs  sample_response.json
server/: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
server/crates/mock_football_api/src/: main.rs
server/src/: main.rs  trace.rs
server/src/cache/: error.rs  inner.rs  mod.rs
server/src/error/: mod.rs  report_error.rs
server/src/football/: mod.rs
server/src/router/: handlers.rs  mod.rs
server/src/trace/: mod.rs
src/: lib.rs  main.rs
src/cache/: error.rs  inner.rs  mod.rs
src/error/: mod.rs  report_error.rs
src/football/: mod.rs  results.rs
src/router/: handlers.rs  mod.rs
