[package]
name = "football_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.16", features = ["json"] }
chrono = "0.4.20"
color-eyre = "0.6.1"
console-subscriber = "0.1.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
parking_lot = "0.12.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17", features = ["full", "tracing"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["cors", "trace"] }
tracing = "0.1.32"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
tracing-tree = "0.2.0"
